# pip_package

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: Lint.yml  docs.yml  publish-check.yaml  tests.yml
docs/: index.md
site/: 404.html  index.html  objects.inv
src/gregs_pip_package/: LICENSE.md  __init__.py  identity.py
src/gregs_pip_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test_identity.py
